🐂🤑 Checkpoint ./views/customers.ejs:10176435/24 ./views/employees.ejs:10176435/170

--- a/views/customers.ejs
+++ b/views/customers.ejs
@@ -75,7 +75,7 @@
             <b>Email: </b>
           </div>
           <div class = col-sm-4>
-          <input value="" id="email"  type="text" > 
+          <input value="" id="email"  type="email"> 
           </div>
         </div>
         
