--- a/views/claims.ejs
+++ b/views/claims.ejs
@@ -148,10 +148,14 @@ Goals for this page: Re-open a closed claim ✓, close a claim if theres a resol
         <% } %>
         <div class = "row mt-3">
           <div class = "col-sm-4">
-        <button id = "homebtn" class = "btn btn-success w-50 h-50 responsive-width" onclick="addComment()">Add Comment</button>
+        <button id = "homebtn" class = "btn btn-success w-50 responsive-width mb-3" onclick="addComment()">Add Comment</button>
         <p id="addComment" style="display:none" ><input value="" id="comment" type="text" ></p>
+          </div>
+          <div class = "col-sm-4">
+          <button id = "homebtn" class = "btn btn-success responsive-width" onclick="resolve();">Resolve Claim</button>
+            </div>
       </div>
-      <button onclick="resolve();">Resolve Claim</button>
+      
       </form>
     </div>
   </div>
