--- a/views/supportclaim.ejs
+++ b/views/supportclaim.ejs
@@ -62,13 +62,7 @@
             <% if (data[0].resolution==='unresolved') { %> <!--  add Resolve dropdown option if condition   -->
             <li><a href="#" onclick="resolveModal('<%=data[0].claimid%>')">Resolve</a></li>
             <%}%>
-            <% if (data[0].status==='Closed') { %> <!--  add Re-open dropdown option if condition   -->
-            <li><a id="myLink" href="#" onclick="openClaim('<%=data[0].claimid%>','<%=claims[0].product%>')">Re-open</a></li>
-            <%}%>
-            <% if (data[0].resolution!='unresolved' & data[0].status==='Open' ) {%> <!--  add Close dropdown option if condition   -->
-            <li><a href="#" onclick="closeClaim('<%=data[0].claimid%>','<%=claims[0].product%>')">Close</a></li>
-            <%}%>
-            <li><a href='/edit/<%=data[0].claimid%>/claims'>Edit Claim</a></li>  <!--  add Edit dropdown option  -->
+            
           </ul>
         </div>
     <%} else { %>
@@ -130,5 +124,101 @@
 </div>
   
   </body>
+    
+      <script type=text/javascript>
+  
+  function addComment(){
+    document.getElementById("addComment").style.display = "block";
+  }
+  
+  function resolve(){
+    var resolution = document.getElementById('resolutionList').value;
+    var claim = document.getElementById('resolveform').value
+    var comment = document.getElementById('comment').value;
+    if (comment != ""){
+      //Send comment
+      fetch('https://techmagic.glitch.me/api/claims/comments', {
+        headers:{
+          "content-type":"application/json",
+        },
+        body: JSON.stringify({
+          claimid:claim,
+          description:comment,
+          employeeid: 1
+        }),
+        method: 'POST'
+        }).then(resp=>{
+        }, err=>{
+          console.log(err);
+        })
+    }
+    fetch('https://techmagic.glitch.me/api/resolutions/update/close', {
+        headers:{
+          "content-type":"application/json",
+        },
+        body: JSON.stringify({
+          resolutionid: resolution,
+          claimid: claim
+        }),
+        method: 'PUT'
+    }).then(resp=>{
+    }, err=>{
+      console.log(err);
+    })
+    window.location.reload();//so changes render
+  }
+  
+  function resolveModal(ele){
+    var modal = document.getElementById("descriptionModal"); 
+    var closeBtn = document.getElementsByClassName("close")[0];
+    document.getElementById("resolveform").value=ele
+    modal.style.display = "block";
+    //close out of modal either when clicking 'x' 
+    closeBtn.onclick = function() {
+      modal.style.display = "none";
+    }
+    //or close modal when clicking outside of the modal
+    window.onclick = function(event) {
+      if (event.target == modal) {
+      modal.style.display = "none";
+      }
+    }
+  }
+  
+  function closeClaim(id, prod){
+   fetch('https://techmagic.glitch.me/api/claims/update', {
+        headers:{
+          "content-type":"application/json",
+        },
+        body: JSON.stringify({
+          claimid: id,
+          status: "Closed"
+        }),
+        method: 'PUT'
+    }).then(resp=>{
+    }, err=>{
+      console.log(err);
+    })
+    window.location.reload();//so changes render
+  }
+  
+  function openClaim(id, prod){
+    fetch('https://techmagic.glitch.me/api/claims/update', {
+        headers:{
+          "content-type":"application/json",
+        },
+        body: JSON.stringify({
+          claimid: id,
+          status: "Open"
+        }),
+        method: 'PUT'
+    }).then(resp=>{
+    }, err=>{
+      console.log(err);
+    })
+    window.location.reload();//so changes render
+  }
+
+</script>
 
 <%- include("partials/footer") %>
