--- a/views/supportclaim.ejs
+++ b/views/supportclaim.ejs
@@ -75,9 +75,11 @@
     <table class="table">
       <tbody><tr><th>Comment</th><th>Date</th></tr>
         <% data.forEach(function(datum){ %>
+        <% var date = new Date(datum.date) %>
+        <% var date = (date.getMonth()+1) + "/" + date.getDate() + "/" +  date.getFullYear() %>
         <tr>
           <td><%= datum.commentdescription %></td>
-          <td><%= datum.date %></td>
+          <td><%= date %></td>
         </tr>
         <% }); %>
       </tbody>
