🍤🌁 Checkpoint ./views/partials/header.ejs:10221761/73 ./views/partials/supportHeader.ejs:10221761/2047

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,7 +14,7 @@
 
   <div class = "col-sm-2 text-center h-100">
     <form>
-    <button id = "homebtn" class = "btn btn-success w-100 h-50 " formaction="/admin" formmethod="GET" type="submit">Admin Home</button>
+    <button id = "homebtn" class = "btn btn-success w-100 h-50 " formaction="/" formmethod="GET" type="submit">Home</button>
     </form>
   </div>
   <div class = "col-sm-2 text-center h-100">
