🕶📠 Checkpoint ./views/partials/supportHeader.ejs:10221761/1123 ./views/home.ejs:10221761/79 ./views/supportclaims.ejs:10221761/791 ./views/supportclaim.ejs:10221761/776 ./views/supportnav.ejs:10221761/777 ./views/supportproducts.ejs:10221761/776

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,7 +18,7 @@
 
 <body id= "home" class = "container">
   
-<div id= "hometitle" class = "h1 text-center mt-5">TechMagic Support</div>
+<div id= "hometitle" class = "h1 text-center mt-5">TechMagic</div>
 <div class = "row mt-5">
 
   <div class = "col-sm-6 text-center h-100">
@@ -30,7 +30,7 @@
  
   <div class = "col-sm-6 text-center">
     <form>
-    <button id = "homebtn" class= "btn btn-success w-50 h-50 responsive-width" formaction="/supportviews/supportnav" formmethod="GET" type="submit"> Support </button>
+    <button id = "homebtn" class= "btn btn-success w-50 h-50 responsive-width" formaction="/supportviews/login" formmethod="GET" type="submit"> Support </button>
     </form>
   </div>
 
