--- a/views/partials/supportHeader.ejs
+++ b/views/partials/supportHeader.ejs
@@ -1,3 +1,22 @@
+<head>
+  <script src="/static/script.js"></script>
+  <!--   BOOTSTRAP -->
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+<link rel="stylesheet" href="/style.css" type="text/css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+<!-- Popper JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+</head>
+
+
+
 <div id= "home"  class = container>
   <div class = "row mt-5">
 
@@ -8,14 +27,14 @@
   </div>
   <div class = "col-sm-2 text-center h-100">
     <form>
-    <button id = "homebtn" class = "btn btn-success w-100 h-50 " formaction="/login" formmethod="GET" type="submit">Claims</button>
+    <button id = "homebtn" class = "btn btn-success w-100 h-50 " formaction="/orders" formmethod="GET" type="submit">Claims</button>
     </form>
   </div>
   <div class = "col-sm-2 text-center h-100">
     <form>
-    <button id = "homebtn" class = "btn btn-success w-100 h-50 " formaction="/claims" formmethod="GET" type="submit">Products</button>
+    <button id = "homebtn" class = "btn btn-success w-100 h-50 " formaction="/supportviews/products" formmethod="GET" type="submit">Products</button>
     </form>
-    </div>
+      </div
   </div>
 
   </div>
