--- a/views/supportnav.ejs
+++ b/views/supportnav.ejs
@@ -1,21 +1,5 @@
 <html lang="en">
-<head>
-  <script src="/static/script.js"></script>
-  <!--   BOOTSTRAP -->
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-<link rel="stylesheet" href="/style.css" type="text/css">
-
-<!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
-<!-- Popper JS -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-
-<!-- Latest compiled JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-</head>
-
+<%- include("partials/supportHeader") %>
 
 <body id= "home" class="container">
   <h1 id= "hometitle" class = "h1 text-center mt-5">Support Navigation</h1>
