🐌🐴 Checkpoint ./views/partials/supportHeader.ejs:10221761/125

--- a/views/partials/supportHeader.ejs
+++ b/views/partials/supportHeader.ejs
@@ -17,20 +17,19 @@
 
 
 
-<div id= "home"  class = container>
-  <div class = "row mt-5">
-
-  <div class = "col-sm-2 text-center h-100">
+<div id= "supporthome"  class = container>
+  <div class = "row mt-5 col-12">
+  <div class = "col-sm-3 text-center h-100">
     <form>
     <button id = "homebtn" class = "btn btn-success w-100 h-50 " formaction="/" formmethod="GET" type="submit">Home</button>
     </form>
   </div>
-  <div class = "col-sm-2 text-center h-100">
+  <div class = "col-sm-3 text-center h-100">
     <form>
-    <button id = "homebtn" class = "btn btn-success w-100 h-50 " formaction="/orders" formmethod="GET" type="submit">Claims</button>
+    <button id = "homebtn" class = "btn btn-success w-100 h-50 " formaction="/supportviews/employeeclaims/:employeei" formmethod="GET" type="submit">Claims</button>
     </form>
   </div>
-  <div class = "col-sm-2 text-center h-100">
+  <div class = "col-sm-3 text-center h-100">
     <form>
     <button id = "homebtn" class = "btn btn-success w-100 h-50 " formaction="/supportviews/products" formmethod="GET" type="submit">Products</button>
     </form>
