--- a/views/partials/supportHeader.ejs
+++ b/views/partials/supportHeader.ejs
@@ -26,12 +26,12 @@
   </div>
   <div class = "col-sm-3 text-center h-100">
     <form>
-    <button id = "homebtn" class = "btn btn-success w-100 h-50 " formaction="/supportviews/employeeclaims/:employeei" formmethod="GET" type="submit">Claims</button>
+    <button id = "homebtn" class = "btn btn-success w-100 h-50 " formaction="/supportviews/employeeclaims/<%=id%>" formmethod="GET" type="submit">Claims</button>
     </form>
   </div>
   <div class = "col-sm-3 text-center h-100">
     <form>
-    <button id = "homebtn" class = "btn btn-success w-100 h-50 " formaction="/supportviews/products" formmethod="GET" type="submit">Products</button>
+    <button id = "homebtn" class = "btn btn-success w-100 h-50 " formaction="/supportviews/products/<%=id%>" formmethod="GET" type="submit">Products</button>
     </form>
       </div
   </div>
