--- a/views/supportclaims.ejs
+++ b/views/supportclaims.ejs
@@ -16,7 +16,7 @@
     </form><br>
   </div>
     <div class = "col-sm-6">
-      <form action="/supportviews/<%= claimtype%>/<%= id%>/date" formmethod="GET">
+      <form action="/supportviews/<%= claimtype%>/<%= pid%>/date" formmethod="GET">
       <input type="radio" id="Oldest" name="order" value="asc">
       <label for="Oldest">Oldest</label><br>
       <input type="radio" id="Newest" name="order" value="desc">
@@ -24,7 +24,7 @@
       <input type="submit" value="Submit" id = "homebtn" class = "btn btn-success h-50">
     </form><br>
     </div>
-  <form action="/supportviews/<%= claimtype%>/<%= id%>" formmethod"GET">
+  <form action="/supportviews/<%= claimtype%>/<%= pid%>" formmethod"GET">
       <input type="submit" value="Reset" id = "homebtn" class = "btn btn-success h-50">
     </form><br>
   </div>
