🍫🕌 Checkpoint ./views/partials/supportHeader.ejs:10221761/2777 ./views/home.ejs:10221761/15 ./views/supportnav.ejs:10221761/281 ./views/partials/header.ejs:10221761/44

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,7 +30,7 @@
  
   <div class = "col-sm-6 text-center">
     <form>
-    <button id = "homebtn" class= "btn btn-success w-50 h-50 responsive-width" formaction="/supportviews/login" formmethod="GET" type="submit"> Support </button>
+    <button id = "homebtn" class= "btn btn-success w-50 h-50 responsive-width" formaction="/supportviews/supportnav" formmethod="GET" type="submit"> Support </button>
     </form>
   </div>
 
