--- a/views/partials/supportHeader.ejs
+++ b/views/partials/supportHeader.ejs
@@ -22,12 +22,12 @@
 
   <div class = "col-sm-2 text-center h-100">
     <form>
-    <button id = "homebtn" class = "btn btn-success w-100 h-50 " formaction="/" formmethod="GET" type="submit">Home</button>
+    <button id = "homebtn" class = "btn btn-success w-100 h-50 " formaction="/" formmethod="GET" type="submit">TechMagicHome</button>
     </form>
   </div>
   <div class = "col-sm-2 text-center h-100">
     <form>
-    <button id = "homebtn" class = "btn btn-success w-100 h-50 " formaction="/orders" formmethod="GET" type="submit">Claims</button>
+    <button id = "homebtn" class = "btn btn-success w-100 h-50 " formaction="/supportviews/login" formmethod="GET" type="submit">Claims</button>
     </form>
   </div>
   <div class = "col-sm-2 text-center h-100">
