--- a/views/supportnav.ejs
+++ b/views/supportnav.ejs
@@ -1,12 +1,12 @@
 <html lang="en">
 <%- include("partials/supportHeader") %>
 
-<body id= "home" class="container">
-  <h1 id= "hometitle" class = "h1 text-center mt-5">Support Navigation</h1>
-  <div class = "row mt-5">
+<body id= "home"  class = container>
+  <h1 id= "hometitle" class = "h1 text-center mt-5">Support Home</h1>
+</body>
     
 
-  <div class = "col-sm-6 text-center h-100">
+<!--   <div class = "col-sm-6 text-center h-100">
   <form>
     <button id = "homebtn" class = "btn btn-success w-50 h-50" formaction="/supportviews/login" formmethod="GET" type="submit"> Claims </button><br><br>
   </form>
@@ -17,7 +17,7 @@
     <button id = "homebtn" class = "btn btn-success w-50 h-50" formaction="/supportviews/products" formmethod="GET" type="submit"> Products </button><br><br>
   </form>
   </div>
-  </div>
+  </div> -->
 
   
 </body>
