--- a/views/partials/supportHeader.ejs
+++ b/views/partials/supportHeader.ejs
@@ -1,28 +1,20 @@
 <head>
-  <script src="/static/script.js"></script>
+  <link rel="stylesheet" type="text/css" href="/style.css">
+  <script src="/script.js"></script>
   <!--   BOOTSTRAP -->
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-<link rel="stylesheet" href="/style.css" type="text/css">
-
-<!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
-<!-- Popper JS -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-
-<!-- Latest compiled JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 
-
-
-<div id= "home"  class = container>
+<div id= "home"  class = "container align-self-center">
   <div class = "row mt-5">
-
+  <div class = "col-sm-3">
+    </div>
   <div class = "col-sm-2 text-center h-100">
     <form>
-    <button id = "homebtn" class = "btn btn-success w-100 h-50 " formaction="/" formmethod="GET" type="submit">TechMagicHome</button>
+    <button id = "homebtn" class = "btn btn-success w-100 h-50 " formaction="/" formmethod="GET" type="submit">TechMagic Home</button>
     </form>
   </div>
   <div class = "col-sm-2 text-center h-100">
@@ -36,5 +28,7 @@
     </form>
       </div
   </div>
-
+  <div class = "col-sm-3">
+    </div>
+  </div>
   </div>
