--- a/views/supportclaims.ejs
+++ b/views/supportclaims.ejs
@@ -5,35 +5,31 @@
   <body id="home" class="container">
     <h1 id= "hometitle" class = "h1 text-center mt-5">Claims for <%= title %> <%= id %></h1>
     
-  <div class="button-group">
+  <div class="button-group" style="display:flex">
       <div class = "row">
-        <form class=".form-inline" action="/supportviews/<%= claimtype%>/<%= id %>/status" formmethod="GET">
+        <form class="form-inline" style="width:100%; justify-content:right" action="/supportviews/<%= claimtype%>/<%= id %>/status" formmethod="GET">
           <input type="radio" id="Open" name="status" value="Open">
           <label for="Open">Open</label><br>
           <input type="radio" id="Closed" name="status" value="Closed">
           <label for="closed">Closed</label><br>
-          <input type="submit" value="Submit" id = "homebtn" class = "btn btn-success h-50" >
+          <input type="submit" value="Submit" id = "homebtn" class = "btn btn-success h-100" >
         </form><br>
       </div>
   
       <div class = "row">
-        <div class = "col-sm-6">
-          <form action="/supportviews/<%= claimtype%>/<%= id%>/date" formmethod="GET">
-          <input type="radio" id="Oldest" name="order" value="asc">
-          <label for="Oldest">Oldest</label><br>
-          <input type="radio" id="Newest" name="order" value="desc">
-          <label for="Newest">Newest</label><br>
-          <input type="submit" value="Submit" id = "homebtn" class = "btn btn-success h-50">
+          <form class="form-inline" style="justify-content:right" action="/supportviews/<%= claimtype%>/<%= id%>/date" formmethod="GET">
+            <input type="radio" id="Oldest" name="order" value="asc">
+            <label for="Oldest">Oldest</label><br>
+            <input type="radio" id="Newest" name="order" value="desc">
+            <label for="Newest">Newest</label><br>
+            <input type="submit" value="Submit" id = "homebtn" class = "btn btn-success h-100">
         </form><br>
-        </div>
       </div>
   
       <div class = "row">
-        <div class = "col-sm-6">
-          <form action="/supportviews/<%= claimtype%>/<%= id%>" formmethod"GET">
-            <input type="submit" value="Reset" id = "homebtn" class = "btn btn-success h-50">
+          <form class="form-inline"style="justify-content:right" action="/supportviews/<%= claimtype%>/<%= id%>" formmethod"GET">
+            <input type="submit" value="Reset" id = "homebtn" class = "btn btn-success h-100">
           </form><br>
-        </div>
       </div>
   </div>
 
