🛎💈 Checkpoint ./views/customers.ejs:10221761/17 ./views/employees.ejs:10221761/26 ./views/claims.ejs:10221761/1684 ./views/partials/vieworder.ejs:10221761/36

--- a/views/customers.ejs
+++ b/views/customers.ejs
@@ -12,7 +12,7 @@
 
   <div class="dropdown mt-3"> <!-- dropdown is a bootstrap class p sure, so is dropdown menu-->
     <% if (locals.sort) { %>
-    <button id = "homebtn" class="btn btn-success w-25 dropdown-toggle"  type="button" data-toggle="dropdown"><%=sort.charAt(0).toUpperCase()+ sort.slice(1).toLowerCase()%><span class="caret"></span>Sort By</button>
+    <button id = "homebtn" class="btn btn-success w-25 dropdown-toggle"  type="button" data-toggle="dropdown">Sort By <%=sort.charAt(0).toUpperCase()+ sort.slice(1).toLowerCase()%><span class="caret"></span></button>
     <%}else{%>
         <button id = "homebtn" class="btn btn-success w-25 dropdown-toggle" type="button" data-toggle="dropdown"><span class="caret"></span>Sort By</button>
     <%}%>
