--- a/views/partials/vieworder.ejs
+++ b/views/partials/vieworder.ejs
@@ -36,7 +36,7 @@
         <% if (claim.productpurchaseid===resp.productpurchaseid){%>
           <% existingclaim = "true" %>
         <form>
-          <button id = "homebtn" class = "btn btn-success w-50 h-50" formaction='/edit/<%=claim.claimid%>/orders' formmethod="GET" type="submit">View Claim</button>
+          <button id = "homebtn" class = "btn btn-success w-50 h-50" style="background:#006A77!important"formaction='/edit/<%=claim.claimid%>/orders' formmethod="GET" type="submit">View Claim</button>
         </form>
           
           <% }%>
