--- a/views/employees.ejs
+++ b/views/employees.ejs
@@ -10,7 +10,7 @@
 
   <div class="dropdown"> <!-- dropdown is a bootstrap class p sure, so is dropdown menu-->
     <% if (locals.sort) { %>
-    <button id = "homebtn" class="btn btn-success w-25 dropdown-toggle mt-3"  type="button" data-toggle="dropdown"><%=sort.charAt(0).toUpperCase()+ sort.slice(1).toLowerCase()%><span class="caret"></span>Sort By</button>
+    <button id = "homebtn" class="btn btn-success w-25 dropdown-toggle mt-3"  type="button" data-toggle="dropdown">Sort By <%=sort.charAt(0).toUpperCase()+ sort.slice(1).toLowerCase()%><span class="caret"></span></button>
     <%}else{%>
     <button id = "homebtn" class="btn btn-success w-25 dropdown-toggle mt-3" type="button" data-toggle="dropdown"><span class="caret"></span>Sort By</button>
     <%}%>
@@ -44,7 +44,7 @@
 <!-- Adding New Employee Modal -->
 <div id="newEmployeeModal" class="modal">
   <div class="modal-content">
-    <span class="close">&times;</span><!-- close button -->
+    <span id="close" class="close">&times;</span><!-- close button -->
     <div class="d-flex justify-content-center flex-column">
       <form id="updateform"> 
         
